--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,6 @@ element.style {
 
 .about img {
     padding-right: 10px;
-    width: 485px;
 }
 
 .col-md-4 .servicevector img {
@@ -565,8 +564,8 @@ footer p {
 }
 
 @media screen and (max-width:1199px) {
-    .col-md-6 .about {
-        width: 50%;
+    .about img {
+        width: 485px;
     }
 }
 
